# usb_modeswitch

./: .gitignore  CMakeLists.txt
assets/: usb_modeswitch.tcl.in
src/: usb_modeswitch.c
